--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -288,6 +288,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec_always --no-startup-id feh --bg-scale $HOME/Documents/astronautshrugged.jpg
 exec --no-startup-id ~/.fehbg
+exec_always --no-startup-id ~/.i3/polybar.sh
 # exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
 exec --no-startup-id xfce4-power-manager
@@ -315,34 +316,33 @@ exec_always --no-startup-id fix_xcursor
 # Polybar
 # exec_always --no-startup-id $HOME/.i3/polybar.sh &
 
-# Start i3bar to display a workspace bar (plus the system information i3status if available)
- bar {
-	i3bar_command i3bar
-	status_command i3status
-	position bottom
-
+## Start i3bar to display a workspace bar (plus the system information i3status if available)
+# bar {
+#	i3bar_command i3bar
+#	status_command i3status
+#	position bottom
+#
 ## please set your primary output first. Example: 'xrandr --output eDP1 --primary'
-	tray_output primary
-	tray_output eDP1
+#	tray_output primary
+#	tray_output eDP1
+#
+#	bindsym button4 nop
+#	bindsym button5 nop
+#  font xft:Source Code Pro, FontAwesom5Free 11
+#	strip_workspace_numbers yes
+# #   colors {
+#      background $color0
+#        statusline $color6
+#        separator  $color7
 
-	bindsym button4 nop
-	bindsym button5 nop
-  font xft:Source Code Pro, FontAwesom5Free 11
-	strip_workspace_numbers yes
-
-    colors {
-        background $color0
-        statusline $color6
-        separator  $color7
-
-#                          border  backgr. text
-        focused_workspace  $color7 $color4 $color7
-        active_workspace   $color7 $color0 $color7
-        inactive_workspace $color7 $color0 $color7
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
-    }
-}
+##                          border  backgr. text
+#        focused_workspace  $color7 $color4 $color7
+#        active_workspace   $color7 $color0 $color7
+#        inactive_workspace $color7 $color0 $color7
+#        binding_mode       #16a085 #2C2C2C #F9FAF9
+#        urgent_workspace   #16a085 #FDF6E3 #E5201D
+#    }
+#}
 
 # hide/unhide i3status bar
 bindsym $mod+m bar mode toggle
