--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,120 +1,397 @@
-[colors]
-color0 = ${xrdb:color0}
-color1 = ${xrdb:color1}
-color2 = ${xrdb:color2}
-color3 = ${xrdb:color3}
-color4 = ${xrdb:color4}
-color5 = ${xrdb:color5}
-color6 = ${xrdb:color6}
-color7 = ${xrdb:color7}
-color8 = ${xrdb:color8}
-color9 = ${xrdb:color9}
-color10 = ${xrdb:color10}
-color11 = ${xrdb:color11}
-color12 = ${xrdb:color12}
-color13 = ${xrdb:color13}
-color14 = ${xrdb:color14}
-color15 = ${xrdb:color15}
+[bar/mybar]
+; Use either of the following command to list available outputs:
+; If unspecified, the application will pick the first one it finds.
+; $ polybar -m | cut -d ':' -f 1
+; $ xrandr -q | grep " connected" | cut -d ' ' -f1
+; monitor = HDMI-0
 
-[settings]
-screenchange-reload = true
+; Use the specified monitor as a fallback if the main one is not found.
+; monitor-fallback =
 
-[global/wm]
-margin-top = 21
-margin-bottom = 21
+; Require the monitor to be in connected state
+; XRandR sometimes reports my monitor as being disconnected (when in use)
+; monitor-strict = false
 
-[bar/Hydrogen]
-bottom = false
-width = 100%
-height = 21
-offset-x = 0%
-offset-y = 0%
+; Tell the Window Manager not to configure the window.
+; Use this to detach the bar if your WM is locking its size/position.
+; Note: With this most WMs will no longer reserve space for 
+; the bar and it will overlap other windows. You need to configure
+; your WM to add a gap where the bar will be placed.
+; override-redirect = true
+
+; Put the bar at the top of the screen
+top = true
+
+; Prefer fixed center position for the `modules-center` block
+; When false, the center position will be based on the size of the other blocks.
 fixed-center = true
-background = ${colors.color0}
-foreground = ${colors.color7}
 
-overline-size = 0
-overline-color = ${colors.color7}
-underline-size = 0
-underline-color = ${colors.color7}
+; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
+; the percentage can optionally be extended with a pixel offset like so:
+; 50%:-10, this will result in a width or height of 50% minus 10 pixels
+width = 100%
+height = 23
 
-; FONTS
-font-0 = FiraCode:size=13;3
-font-1 = FiraCode:size=15;3
-font-2 = FontAwesome:size=13;3
+; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+; the percentage can optionally be extended with a pixel offset like so:
+; 50%:-10, this will result in an offset in the x or y direction 
+; of 50% minus 10 pixels
+; offset-x = 3.4%
+; offset-y = 5
+
+; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
+background = ${xrdb:background}
+
+; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
+foreground = ${xrdb:foreground}
+
+; Background gradient (vertical steps)
+;   background-[0-9]+ = #aarrggbb
+; background-0 = 
+
+; Value used for drawing rounded corners
+; Note: This shouldn't be used together with border-size because the border 
+; doesn't get rounded. For this to work you may also need to enable 
+; pseudo-transparency or use a compositor like compton.
+; Individual top/bottom values can be defined using:
+;   radius-{top,bottom}
+radius = 5.0
+
+; Under-/overline pixel size and argb color
+; Individual values can be defined using:
+;   {overline,underline}-size
+;   {overline,underline}-color
+line-size = 0
+line-color = #f00
+
+; Values applied to all borders
+; Individual side values can be defined using:
+;   border-{left,top,right,bottom}-size
+;   border-{left,top,right,bottom}-color
+; The top and bottom borders are added to the bar height, so the effective
+; window height is:
+;   height + border-top-size + border-bottom-size
+; Meanwhile the effective window width is defined entirely by the width key and
+; the border is placed withing this area. So you effectively only have the
+; following horizontal space on the bar:
+;   width - border-right-size - border-left-size
 
 
-modules-left = ArrowLeft i3 ArrowRight
-modules-center  = ArrowLeft date ArrowRight
+; Number of spaces to add at the beginning/end of the bar
+; Individual side values can be defined using:
+;   padding-{left,right}
+padding-right = 2
 
-; MODULES
+; Number of spaces to add before/after each module
+; Individual side values can be defined using:
+;   module-margin-{left,right}
+module-margin = 1
 
-[module/ArrowRight]
-type = custom/text
-content = "%{T2}%{T-}"
-content-foreground = ${colors.color4}
-content-background = ${colors.color0}
+; Fonts are defined using <font-name>;<vertical-offset>
+; Font names are specified using a fontconfig pattern.
+;   font-0 = NotoSans-Regular:size=8;2
+;   font-1 = MaterialIcons:size=10
+;   font-2 = Termsynu:size=8;-1
+;   font-3 = FontAwesome:size=10
+; See the Fonts wiki page for more details
+font-0 = Inconsolata:bold:size=10;1.5
+font-1 = FontAwesome5Free:style=Solid:size=9;2
+font-2 = FontAwesome5Brands:style=Regular:size=10;2
+font-3 = FontAwesome5Free:style=Regular:size=9;2
 
-[module/ArrowLeft]
-type = custom/text
-content = "%{T2}%{T-}"
-content-foreground = ${colors.color4}
-content-background = ${colors.color0}
+; Modules are added to one of the available blocks
+;   modules-left = cpu ram
+;   modules-center = xwindow xbacklight
+;   modules-right = ipc clock
+modules-left = i3
+modules-center = 
+modules-right = spotify sep wireless-network sep memory sep cpu sep date sep
 
 
-[module/date]
-type = internal/date
-date = "  %d-%m-%Y "
-format-foreground = ${colors.color0}
-format-background = ${colors.color4}
+; The separator will be inserted between the output of each module
+separator =
+
+; This value is used to add extra spacing between elements
+; @deprecated: This parameter will be removed in an upcoming version
+spacing = 0
+
+; Opacity value between 0.0 and 1.0 used on fade in/out
+dim-value = 1.0
+
+; Value to be used to set the WM_NAME atom
+; If the value is empty or undefined, the atom value
+; will be created from the following template: polybar-[BAR]_[MONITOR]
+; NOTE: The placeholders are not available for custom values
+wm-name = i3
 
 
+; Position of the system tray window
+; If empty or undefined, tray support will be disabled
+; NOTE: A center aligned tray will cover center aligned modules
+;
+; Available positions:
+;   left
+;   center
+;   right
+;   none
+tray-position = right
+
+; If true, the bar will not shift its
+; contents when the tray changes
+tray-detached = false
+
+; Tray icon max size
+tray-maxsize = 16
+
+; Background color for the tray container 
+; ARGB color (e.g. #f00, #ff992a, #ddff1023)
+; By default the tray container will use the bar
+; background color.
+tray-background = ${xrdb:background}
+
+; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+tray-offset-x = 0%
+tray-offset-y = 0%
+
+; Pad the sides of each tray icon
+tray-padding = 2
+
+; Scale factor for tray clients
+tray-scale = 1.0
+
+; Restack the bar window and put it above the
+; selected window manager's root
+;
+; Fixes the issue where the bar is being drawn
+; on top of fullscreen window's
+;
+; Currently 333399supported WM's:
+;   bspwm
+;   i3 (requires: `override-redirect = true`)
+; wm-restack = i3
+
+; Set a DPI values used when rendering text
+; This only affects scalable fonts
+; Set this to 0 to let polybar calculate the dpi from the screen size.
+; dpi = 
+dpi-x = 96
+dpi-y = 96
+
+; Enable support for inter-process messaging
+; See the Messaging wiki page for more details.
+enable-ipc = false
+
+; Fallback click handlers that will be called if
+; there's no matching module handler found.
 [module/i3]
 type = internal/i3
-format = <label-state> <label-mode>
 
+; Only show workspaces defined on the same output as the bar
+;
+; Useful if you want to show monitor specific workspaces
+; on different bars
+;
+; Default: false
+pin-workspaces = true
+
+; This will split the workspace name on ':'
+; Default: false
 strip-wsnumbers = true
+
+; Sort the workspaces by index instead of the default
+; sorting that groups the workspaces by output
+; Default: false
 index-sort = true
 
+; Create click handler used to focus workspace
+; Default: true
+enable-click = true
+
+; Create scroll handlers used to cycle workspaces
+; Default: true
+enable-scroll = false
+
+; Wrap around when reaching the first/last workspace
+; Default: true
+wrapping-scroll = false
+
+; Set the scroll cycle direction 
+; Default: true
+reverse-scroll = false
+
+; Use fuzzy (partial) matching on labels when assigning 
+; icons to workspaces
+; Example: code;♚ will apply the icon to all workspaces 
+; containing 'code' in the label
+; Default: false
+fuzzy-match = true
+
+; Workspaces' symbols
 ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
-ws-icon-3 = 4;4
-ws-icon-4 = 5;5
-ws-icon-5 = 6;6
-ws-icon-6 = 7;7
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
 ws-icon-7 = 8;
+ws-icon-default = 
 
-
-label-focused = %icon%
-label-focused-background = ${colors.color4}
-label-focused-foreground = ${colors.color7}
-label-focused-underline  = ${colors.color0}
-label-focused-overline   = ${colors.color0}
-label-focused-padding = 2
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${xrdb:background}
 
 label-unfocused = %icon%
-label-unfocused-background = ${colors.color4}
-label-unfocused-foreground = ${colors.color0}
 label-unfocused-padding = 2
+label-unfocused-foreground = ${xrdb:foreground}
 
-label-occupied = %icon%
-label-occupied-padding = 1
+label-focused = %icon%
+label-focused-foreground = ${xrdb:foreground}
+label-focused-background = ${xrdb:color8}
+label-focused-underline = #fba922
+label-focused-padding = 2
 
 label-urgent = %icon%
-label-urgent-background = ${colors.color1}
+label-urgent-foreground = ${xrdb:foreground}
+label-urgent-background = ${xrdb:color1}
 label-urgent-padding = 2
 
-label-empty = %icon%
-label-empty-foreground = ${colors.color7}
-label-empty-padding = 2
+[module/date]
+type = internal/date
 
-wrapping-scroll = false
+; Seconds to sleep between updates
+interval = 1.0
 
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.color4}
+; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+date = %Y-%m-%d%
 
-label-visible = %icon%
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
+; Optional time format
+time = %H:%M
+
+; if `date-alt` or `time-alt` is defined, clicking
+; the module will toggle between formats
+date-alt = %A, %d %B %Y
+time-alt = %H:%M:%S
+
+label = %date% %time% 
+label-font = 0
+label-foreground = #fff
+
+[module/wireless-network]
+type = internal/network
+interface = wlp2s0
+
+label-connected = %essid%
+format-connected = <ramp-signal> <label-connected>
+label-connected-foreground = ${xrdb:color6}
+
+format-disconnected = <label-disconnected>
+label-disconnected = Not connected
+label-disconnected-foreground = #BF616A
+
+ramp-signal-foreground = ${xrdb:color6}
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-5 = 
+
+[module/spotify]
+type = custom/script
+interval = 1
+format-prefix = " "
+format = <label>
+label-foreground = ${xrdb:color2}
+format-prefix-foreground = ${xrdb:color2}
+exec = python ~/.config/polybar/spotify_status.py -f '{artist} - {song}'
+
+[module/cpu]
+type = internal/cpu
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 2
+
+label =  %percentage%%
+
+label-foreground = ${xrdb:color4}
+; label-padding-right = 1
+
+[module/memory]
+type = internal/memory
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 0.5
+format = <label>
+
+; Available tokens:
+;   %percentage_used% (default)
+;   %percentage_free%
+;   %gb_used%
+;   %gb_free%
+;   %gb_total%
+;   %mb_used%
+;   %mb_free%
+;   %mb_total%
+;   %percentage_swap_used%
+;   %percentage_swap_free%
+;   %mb_swap_total%
+;   %mb_swap_free%
+;   %mb_swap_used%
+;   %gb_swap_total%
+;   %gb_swap_free%
+;   %gb_swap_used%
+
+label =  %gb_used%
+
+label-foreground = #888ba5
+
+[module/temperature]
+type = internal/temperature
+
+; Seconds to sleep between updates
+; Default: 1
+interval = 0.5
+
+; Thermal zone to use
+; To list all the zone types, run 
+; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
+; Default: 0
+thermal-zone = 0
+
+; Full path of temperature sysfs path
+; Use `sensors` to find preferred temperature source, then run
+; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
+; to find path to desired file
+; Default reverts to thermal zone setting
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+
+; Threshold temperature to display warning label (in degrees celsius)
+; Default: 80
+warn-temperature = 60
+
+format = <label>
+
+; Available tags:
+;   <label-warn> (default)
+;   <ramp>
+
+; Available tokens:
+;   %temperature% (deprecated)
+;   %temperature-c%   (default, temperature in °C)
+;   %temperature-f%   (temperature in °F)
+label =  %temperature-c%
+
+label-foreground = #e14122
+
+[module/decor-glyph]
+type = custom/text
+content-foreground = #4e5165
+margin = 0
+
+[module/sep]
+inherit = module/decor-glyph
+content = "/"
