--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -5,6 +5,9 @@ set $shutdown sudo -A shutdown -h now
 set $reboot sudo -A reboot
 set $netrefresh --no-startup-id sudo -A systemctl restart NetworkManager
 
+# Rounded corners
+# border-radius 4
+
 # Dropdown windows
 for_window [instance="dropdown_*"] floating enable
 for_window [instance="dropdown_*"] move scratchpad
@@ -14,7 +17,43 @@ for_window [instance="dropdown_*"] move position center
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:URWGothic-Book 11
+# font xft:URWGothic-Book 11
+font xft:Overpass:style=Regular 11
+
+########################################################################################
+#                                      COLORS                                          #
+########################################################################################
+
+set_from_resource $bg         background
+set_from_resource $fg         foreground
+set_from_resource $color0     color0
+set_from_resource $color1     color1
+set_from_resource $color2     color2
+set_from_resource $color3     color3
+set_from_resource $color4     color4
+set_from_resource $color5     color5
+set_from_resource $color6     color6
+set_from_resource $color7     color7
+set_from_resource $color8     color8
+set_from_resource $color9     color9
+set_from_resource $color10    color10
+set_from_resource $color11    color11
+set_from_resource $color12    color12
+set_from_resource $color13    color13
+set_from_resource $color14    color14
+set_from_resource $color15    color15
+
+
+# class                 border    backgr.   text      indicator   child-border
+client.focused          $color3  $bg       $fg       $fg         $fg
+client.focused_inactive $color0   $bg       $fg       $color4     $color4
+client.unfocused        $color0   $color0   $color7   $color4     $color4
+client.placeholder      #000000   #0c0c0c   #ffffff   #000000•
+client.background       $bg
+
+########################################################################################
+#                                     END COLORS                                       #
+########################################################################################
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
@@ -26,7 +65,8 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+n exec --no-startup-id dmenu_run
+bindsym $mod+d exec rofi -show run -lines 8
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -146,36 +186,7 @@ bindsym $mod+Ctrl+Right workspace next
 bindsym $mod+Ctrl+Left workspace prev
 
 
-########################################################################################
-#                               COLORS AND WORKSPACES                                  #
-########################################################################################
-
-set_from_resource $bg         background
-set_from_resource $fg         foreground
-set_from_resource $color0     color0
-set_from_resource $color1     color1
-set_from_resource $color2     color2
-set_from_resource $color3     color3
-set_from_resource $color4     color4
-set_from_resource $color5     color5
-set_from_resource $color6     color6
-set_from_resource $color7     color7
-set_from_resource $color8     color8
-set_from_resource $color9     color9
-set_from_resource $color10    color10
-set_from_resource $color11    color11
-set_from_resource $color12    color12
-set_from_resource $color13    color13
-set_from_resource $color14    color14
-set_from_resource $color15    color15
-
-
-# class                 border  backgr. text    indicator   child-border
-client.focused          $fg     $bg     $fg     $fg         $fg
-client.focused_inactive $color4 $bg     $fg     $color4     $color4
-client.unfocused        $color4 $color0 $color7 $color4     $color4
-client.placeholder      #000000 #0c0c0c #ffffff #000000•
-client.background       $bg
+###### WORKSPACES ########
 
 # Hide borders
 hide_edge_borders both
@@ -287,7 +298,7 @@ bindsym $mod+9 exec --no-startup-id blurlock
 # Autostart applications
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec_always --no-startup-id feh --bg-scale $HOME/Documents/astronautshrugged.jpg
-exec --no-startup-id ~/.fehbg
+exec_always --no-startup-id ~/.fehbg
 exec_always --no-startup-id ~/.i3/polybar.sh
 # exec --no-startup-id manjaro-hello
 exec --no-startup-id nm-applet
@@ -298,6 +309,7 @@ exec --no-startup-id clipit
 exec --no-startup-id xautolock -time 10 -locker blurlock
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf --experimental-backends
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
