--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -29,8 +29,8 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 95%
-height = 24
+width = 100%
+height = 32
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -55,7 +55,7 @@ foreground = ${xrdb:foreground}
 ; pseudo-transparency or use a compositor like compton.
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-; radius = 5
+radius = 0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
@@ -81,7 +81,7 @@ line-color = #f00
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding-right = 1
+; padding-right = 1
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -96,10 +96,10 @@ module-margin = 1px
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 ; font-0 = Inconsolata:style=Bold:size=10;0
-font-0 = Fira Code:style=Regular:size=8;2
-font-1 = FontAwesome5Free:style=Solid:size=9;2
-; font-2 = FontAwesome5Brands:style=Regular:size=10;2
-; font-3 = FontAwesome5Free:style=Regular:size=9;2
+font-0 = Fira Code:style=Regular:size=9;2
+font-1 = FontAwesome5Free:style=Solid:size=10;2
+font-2 = FontAwesome5Brands:style=Regular:size=10;2
+font-3 = FontAwesome5Free:style=Regular:size=9;2
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -175,192 +175,8 @@ tray-scale = 1.0
 ; This only affects scalable fonts
 ; Set this to 0 to let polybar calculate the dpi from the screen size.
 ; dpi = 
-dpi-x = 96
-dpi-y = 96
-
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
-enable-ipc = false
-
-
-[bar/xmonadbar]
-; Use either of the following command to list available outputs:
-; If unspecified, the application will pick the first one it finds.
-; $ polybar -m | cut -d ':' -f 1
-; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-; monitor = HDMI-0
-
-; Use the specified monitor as a fallback if the main one is not found.
-; monitor-fallback =
-
-; Require the monitor to be in connected state
-; XRandR sometimes reports my monitor as being disconnected (when in use)
-; monitor-strict = false
-
-; Tell the Window Manager not to configure the window.
-; Use this to detach the bar if your WM is locking its size/position.
-; Note: With this most WMs will no longer reserve space for 
-; the bar and it will overlap other windows. You need to configure
-; your WM to add a gap where the bar will be placed.
-; override-redirect = true
-
-; Put the bar at the top of the screen
-top = true
-
-; Prefer fixed center position for the `modules-center` block
-; When false, the center position will be based on the size of the other blocks.
-fixed-center = true
-
-; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 98%
-height = 20
-
-; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
-; of 50% minus 10 pixels
-offset-x = 1%
-offset-y = 3
-
-; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${xrdb:background}
-
-; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
-foreground = ${xrdb:foreground}
-
-; Background gradient (vertical steps)
-;   background-[0-9]+ = #aarrggbb
-; background-0 = 
-
-; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
-; doesn't get rounded. For this to work you may also need to enable 
-; pseudo-transparency or use a compositor like compton.
-; Individual top/bottom values can be defined using:
-;   radius-{top,bottom}
-; radius = 15
-
-; Under-/overline pixel size and argb color
-; Individual values can be defined using:
-;   {overline,underline}-size
-;   {overline,underline}-color
-line-size = 2
-line-color = #f00
-
-; Values applied to all borders
-; Individual side values can be defined using:
-;   border-{left,top,right,bottom}-size
-;   border-{left,top,right,bottom}-color
-; The top and bottom borders are added to the bar height, so the effective
-; window height is:
-;   height + border-top-size + border-bottom-size
-; Meanwhile the effective window width is defined entirely by the width key and
-; the border is placed withing this area. So you effectively only have the
-; following horizontal space on the bar:
-;   width - border-right-size - border-left-size
-; border-size = 1px
-; border-color = #000
-
-; Number of spaces to add at the beginning/end of the bar
-; Individual side values can be defined using:
-;   padding-{left,right}
-padding-left = 1
-padding-right = 1
-
-; Number of spaces to add before/after each module
-; Individual side values can be defined using:
-;   module-margin-{left,right}
-module-margin = 1px
-
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
-; font-0 = Inconsolata:style=Bold:size=10;0
-; font-0 = Fira Code:style=Regular:size=8;2
-font-0 = Iosevka:style=Regular:size=10;2
-font-1 = FontAwesome5Free:style=Solid:size=8;2
-font-2 = FontAwesome5Brands:style=Regular:size=8;2
-font-3 = FontAwesome5Free:style=Regular:size=8;2
-
-; Modules are added to one of the available blocks
-modules-left = xmonad-xworkspaces
-modules-center =
-modules-right = wireless-network memory cpu battery date 
-
-; The separator will be inserted between the output of each module
-separator = 
-
-; This value is used to add extra spacing between elements
-; @deprecated: This parameter will be removed in an upcoming version
-spacing = 0
-
-; Opacity value between 0.0 and 1.0 used on fade in/out
-dim-value = 1.0
-
-; Value to be used to set the WM_NAME atom
-; If the value is empty or undefined, the atom value
-; will be created from the following template: polybar-[BAR]_[MONITOR]
-; NOTE: The placeholders are not available for custom values
-wm-name = xmonad
-
-
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
-;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
-tray-position = right
-
-; If true, the bar will not shift its
-; contents when the tray changes
-tray-detached = false
-
-; Tray icon max size
-tray-maxsize = 16
-
-; Background color for the tray container 
-; ARGB color (e.g. #f00, #ff992a, #ddff1023)
-; By default the tray container will use the bar
-; background color.
-tray-background = ${xrdb:background}
-
-; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-tray-offset-x = 0%
-tray-offset-y = 0%
-
-; Pad the sides of each tray icon
-tray-padding = 2
-
-; Scale factor for tray clients
-tray-scale = 1.0
-
-; Restack the bar window and put it above the
-; selected window manager's root
-;
-; Fixes the issue where the bar is being drawn
-; on top of fullscreen window's
-;
-; Currently 333399supported WM's:
-;   bspwm
-;   i3 (requires: `override-redirect = true`)
-; wm-restack = i3
-
-; Set a DPI values used when rendering text
-; This only affects scalable fonts
-; Set this to 0 to let polybar calculate the dpi from the screen size.
-; dpi = 
-dpi-x = 96
-dpi-y = 96
+dpi-x = 120
+dpi-y = 120
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -368,44 +184,6 @@ enable-ipc = false
 
 ; Fallback click handlers that will be called if
 ; there's no matching module handler found.
-
-[module/xmonad-xworkspaces]
-type = internal/xworkspaces
-
-pin-workspaces = false
-enable-click = true
-enable-scroll = false
-
-icon-0 = term;
-icon-1 = www;
-icon-2 = code;
-icon-3 = doc;
-icon-4 = vlc;
-icon-5 = chat;
-icon-6 = teams;
-icon-7 = mus;
-icon-8 = gfx;
-; icon-default = 
-
-format = <label-state>
-
-label-active = { %name% }
-label-active-foreground = ${xrdb:foreground}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-foreground = ${xrdb:color4}
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-foreground = ${xrdb:color1}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${xrdb:color8}
-label-empty-padding = 1
-
-
 [module/i3]
 type = internal/i3
 
@@ -487,8 +265,7 @@ interval = 1.0
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = ""
-; date = %d/%m/%y
+date = %d/%m/%y
 
 ; Optional time format
 time = %H:%M
@@ -498,10 +275,10 @@ time = %H:%M
 date-alt = %A, %d %B %Y
 time-alt = %H:%M:%S
 
-label = %time% %date%
+label = %time% 
 label-font = 0
-label-foreground = ${xrdb:color6}
-; format-underline = #000
+label-foreground = #fff
+format-underline = #000
 
 [module/wireless-network]
 type = internal/network
@@ -509,11 +286,11 @@ interface = wlp2s0
 
 format-underline = ${xrdb:color3}
 
-label-connected = %{A1:nm-connection-editor:}%essid%%{A}
+label-connected = %essid%
 format-connected = <ramp-signal> <label-connected>
 label-connected-foreground = ${xrdb:color6}
 
-format-disconnected = %{A1:nm-connection-editor:}<label-disconnected>%{A}
+format-disconnected = <label-disconnected>
 label-disconnected = Not connected
 label-disconnected-foreground = #BF616A
 
@@ -542,7 +319,7 @@ type = internal/cpu
 ; Default: 1
 interval = 2
 
-;format-underline = ${xrdb:color4}
+format-underline = ${xrdb:color4}
 
 label =  %percentage%%
 
@@ -577,7 +354,7 @@ format = <label>
 
 label =  %gb_used%
 
-; format-underline = #888ba5
+format-underline = #888ba5
 label-foreground = #888ba5
 
 [module/temperature]
