Modified polybar file structure

--- a/polybar/.config/polybar/config-cpy.ini
+++ b/polybar/.config/polybar/config-cpy.ini
@@ -106,8 +106,8 @@ font-1 = FontAwesome5Free:style=Solid:size=9;2
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 modules-left = i3
-modules-center = 
-modules-right = spotify wireless-network memory cpu battery date 
+modules-center = date
+modules-right = spotify wireless-network memory cpu battery
 
 ; The separator will be inserted between the output of each module
 separator = 
@@ -175,8 +175,8 @@ tray-scale = 1.0
 ; This only affects scalable fonts
 ; Set this to 0 to let polybar calculate the dpi from the screen size.
 ; dpi = 
-dpi-x = 96
-dpi-y = 96
+dpi-x = 120
+dpi-y = 120
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -214,18 +214,19 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 98%
-height = 20
+width = 100%
+height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 1%
-offset-y = 3
+offset-x = 0
+offset-y = 0
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${xrdb:background}
+background = #1e2129 
+; ${xrdb:background}
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${xrdb:foreground}
@@ -284,14 +285,14 @@ module-margin = 1px
 ; font-0 = Inconsolata:style=Bold:size=10;0
 ; font-0 = Fira Code:style=Regular:size=8;2
 font-0 = Iosevka:style=Regular:size=10;2
-font-1 = FontAwesome5Free:style=Solid:size=8;2
-font-2 = FontAwesome5Brands:style=Regular:size=8;2
-font-3 = FontAwesome5Free:style=Regular:size=8;2
+font-1 = FontAwesome5Free:style=Solid:size=9;2
+font-2 = FontAwesome5Brands:style=Regular:size=9;2
+font-3 = FontAwesome5Free:style=Regular:size=9;2
 
 ; Modules are added to one of the available blocks
 modules-left = xmonad-xworkspaces
-modules-center =
-modules-right = wireless-network memory cpu battery date 
+modules-center = date
+modules-right = wireless-network memory cpu battery 
 
 ; The separator will be inserted between the output of each module
 separator = 
@@ -332,7 +333,7 @@ tray-maxsize = 16
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${xrdb:background}
+tray-background = #1e2129 ; ${xrdb:background}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0%
@@ -359,8 +360,8 @@ tray-scale = 1.0
 ; This only affects scalable fonts
 ; Set this to 0 to let polybar calculate the dpi from the screen size.
 ; dpi = 
-dpi-x = 96
-dpi-y = 96
+dpi-x = 120
+dpi-y = 120
 
 ; Enable support for inter-process messaging
 ; See the Messaging wiki page for more details.
@@ -487,7 +488,7 @@ interval = 1.0
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = ""
+date = 
 ; date = %d/%m/%y
 
 ; Optional time format
@@ -500,12 +501,12 @@ time-alt = %H:%M:%S
 
 label = %time% %date%
 label-font = 0
-label-foreground = ${xrdb:color6}
+label-foreground = ${xrdb:color7}
 ; format-underline = #000
 
 [module/wireless-network]
 type = internal/network
-interface = wlp2s0
+interface = wlp3s0
 
 format-underline = ${xrdb:color3}
 
@@ -636,6 +637,7 @@ adapter = ACAD
 
 format-underline = ${xrdb:color2}
 
+format-low = <ramp-capacity> <label-discharging>
 format-charging = <ramp-capacity> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 format-full = <ramp-capacity> <label-full>
