Modified polybar and picom configs

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -3,9 +3,11 @@
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
+use-damage = true;
+vsync = true;
 
 focus-exclude = [
-    # "name = 'rofi'",
+    "name = 'rofi'",
     "window_type *= 'menu'",
     "window_type = 'utility'",
     "window_type = 'dropdown_menu'",
@@ -14,10 +16,20 @@ focus-exclude = [
 
 corner-radius = 13;
 rounded-corners-exclude = [
-    "name = 'polybar'",
+    "name = 'Polybar tray window'",
+    "class_i = 'polybar'",
     "window_type = 'utility'",
     "window_type = 'dropdown_menu'",
     "window_type = 'popup_menu'"
 ];
 
-
+# Enabled client-side shadows on windows.
+shadow = true;
+# The blur radius for shadows. (default 12)
+shadow-radius = 13;
+# The left offset for shadows. (default -15)
+shadow-offset-x = -15;
+# The top offset for shadows. (default -15)
+shadow-offset-y = -15;
+# The translucency for shadows. (default .75)
+shadow-opacity = 0.33;
